2010-05-31  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14534: Cleanup: Icons missing in the new icon-set, and therefore sprites are updated (Thanks to Steffen Ritter)
	* Fixed bug #14535: Checkbox Alignment in TCEforms is broken (Thanks to Steffen Kamper)
	* Fixed bug #14532: SpriteIcons: Clickmenu is not replaced (Thanks to Steffen Ritter)

2010-05-30  Benjamin Mack  <benni@typo3.org>

	* Followup to #14465: Make use of the new Sprite API throughout the TYPO3 Core Backend - Missing check for directory type in class.file_list.inc (Thanks to Steffen Ritter)

2010-05-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14544: Core calls deprecated procesIncludes()
	* Fixed bug #14530: Missing icons in new BE skin (sprites) v5
	* Fixed bug #14530: Missing icons in new BE skin (sprites) v4
	* Fixed bug #14530: Missing icons in new BE skin (sprites) v3
	* Fixed bug #14530: Missing icons in new BE skin (sprites) v2
	* Fixed bug #14526: page tree filterbox styling fixed in new BE layout (Thanks to Jigal van Hemert)
	* Fixed bug #14533: SpriteIcons: Icons in db_new.php are not replaced (Thanks to Steffen Ritter)
	* Fixed bug #14530: Missing icons in new BE skin (sprites)
	* Fixed bug #14520: Css correction for template modul
	* Fixed bug #14525: Workspacemenu JS is broken
	* Fixed bug #14522: Pagetree workspace div correction

2010-05-30  Oliver Hader  <oliver@typo3.org>

	* Added feature #14383: Integrate hooks to backend.php to perform several customizations
	* Fixed bug #14392: typolink creates incomplete links in combination with the forceAbsoluteUrl property

2010-05-29  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12872: Use "strong" instead of "b" (Thanks to Steffen Kamper and Stefano Kowalke)
	* Fixed bug #14517: Set focus on pagetree filter input field (Thanks to Sebastian Gebhard)
	* Fixed bug #14513: Improve rendering of icons in t3-row-header (Thanks to Steffen Gebert)