@@ -26,8 +26,6 @@ Description : styles the Open Documents toolbar item
 	text-align: right;
 	border: 1px dashed #999;
 	padding: 1px 2px;
-	position: relative;
-	top: -4px;
 }
 
 #tx-opendocs-menu .toolbar-item-menu {
