@@ -1,5 +1,6 @@
 2010-05-31  Benjamin Mack  <benni@typo3.org>
 
+	* Fixed bug #14536: Use sprite icons in toolbar (Thanks to Steffen Gebert)
 	* Fixed bug #14534: Cleanup: Icons missing in the new icon-set, and therefore sprites are updated (Thanks to Steffen Ritter)
 	* Fixed bug #14535: Checkbox Alignment in TCEforms is broken (Thanks to Steffen Kamper)
 	* Fixed bug #14532: SpriteIcons: Clickmenu is not replaced (Thanks to Steffen Ritter)
